--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-lazyload": "^2.3.0",
     "react-mentions": "^1.2.0",
     "react-popper": "^1.3.3",
+    "react-pose": "^4.0.8",
     "react-router": "3.2.0",
     "react-select": "^1.2.1",
     "react-sparklines": "1.7.0",
