build: Allow people to use volta instead of notion (#13200)
* build: Allow people to use volta instead of notion

* fix: Update Makefile as well

--- a/package.json
+++ b/package.json
@@ -147,5 +147,9 @@
   "toolchain": {
     "node": "8.15.1",
     "yarn": "1.13.0"
+  },
+  "volta": {
+    "node": "8.15.1",
+    "yarn": "1.13.0"
   }
 }
